Updated project files

--- a/frontend/buses.html
+++ b/frontend/buses.html
@@ -216,7 +216,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Bus Booking</h1>
       <p>Find the best deals for buses</p>
     </div>
