--- a/frontend/cruise.html
+++ b/frontend/cruise.html
@@ -264,7 +264,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Cruise Booking</h1>
       <p>Discover luxury cruise experiences across beautiful destinations</p>
     </div>
