--- a/frontend/index.html
+++ b/frontend/index.html
@@ -135,8 +135,8 @@
   <body>
     <header>
       <div class="auth-buttons">
-        <a href="login.html" class="login-btn">Log In</a>
-        <a href="signup.html" class="login-btn">Sign Up</a>
+        <a href="/login" class="login-btn">Log In</a>
+        <a href="/signup" class="login-btn">Sign Up</a>
       </div>
     </header>
 
@@ -145,7 +145,7 @@
         <h2>Travel Mate</h2>
         <h1>EXPLORE<br />THE WORLD</h1>
         <div class="buttons">
-          <a href="main.html" class="home-btn">Home</a>
+          <a href="/main" class="home-btn">Home</a>
         </div>
       </div>
     </section>
