--- a/frontend/main.html
+++ b/frontend/main.html
@@ -246,10 +246,10 @@
     <div class="navbar">
       <h1>TravelMate</h1>
       <div class="nav-links">
-        <a href="upcoming.html">Upcoming</a>
-        <a href="completed.html">Completed</a>
-        <a href="wallent.html">Wallet</a>
-        <a href="profile.html" class="profile-icon">
+        <a href="/upcoming">Upcoming</a>
+        <a href="/completed">Completed</a>
+        <a href="/wallent">Wallet</a>
+        <a href="/profile" class="profile-icon">
           <img src="project images/profile.jpg" alt="Profile" />
         </a>
       </div>
@@ -444,28 +444,28 @@
       function openBooking(type) {
         switch (type) {
           case "flight":
-            window.location.href = "flights.html";
+            window.location.href = "/flights";
             break;
           case "train":
-            window.location.href = "trains.html";
+            window.location.href = "/trains";
             break;
           case "bus":
-            window.location.href = "buses.html";
+            window.location.href = "/buses";
             break;
           case "cab":
-            window.location.href = "cabs.html";
+            window.location.href = "/cabs";
             break;
           case "hotel":
-            window.location.href = "hotels.html";
+            window.location.href = "/hotels";
             break;
           case "tour":
-            window.location.href = "tours.html";
+            window.location.href = "/tours";
             break;
           case "cruise":
-            window.location.href = "cruise.html";
+            window.location.href = "/cruise";
             break;
           case "insurance":
-            window.location.href = "insurance.html";
+            window.location.href = "/insurance";
             break;
           default:
             showErrorPopup("Coming Soon", "This feature is coming soon!");
