--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -540,7 +540,7 @@
         );
 
         setTimeout(() => {
-          window.location.href = "main.html";
+          window.location.href = "/main";
         }, 2000);
       }
 
