--- a/frontend/trains.html
+++ b/frontend/trains.html
@@ -312,7 +312,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Train Booking</h1>
       <p>Find the best deals for trains</p>
     </div>
@@ -545,7 +545,7 @@
             "error"
           );
           setTimeout(() => {
-            window.location.href = "login.html";
+            window.location.href = "/login";
           }, 2000);
           return;
         }
