--- a/frontend/upcoming.html
+++ b/frontend/upcoming.html
@@ -314,7 +314,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Upcoming Bookings</h1>
       <p>Manage your travel plans</p>
     </div>
@@ -358,7 +358,7 @@
         <div id="bookings-container"></div>
 
         <div class="action-buttons">
-          <a href="main.html" class="btn btn-primary">
+          <a href="/main" class="btn btn-primary">
             <span>Book More Services</span>
           </a>
           <button class="btn btn-secondary" onclick="downloadAllBookings()">
@@ -488,7 +488,7 @@
                 ? "You haven't made any bookings yet."
                 : `No ${currentFilter} bookings found.`
             }</p>
-            <a href="main.html" class="btn btn-primary" style="margin-top: 20px;">
+            <a href="/main" class="btn btn-primary" style="margin-top: 20px;">
             
               <span>Make Your First Booking</span>
             </a>
