--- a/frontend/wallent.html
+++ b/frontend/wallent.html
@@ -417,7 +417,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>TravelMate Wallet</h1>
       <p>Manage your travel funds securely</p>
     </div>
@@ -633,7 +633,7 @@
 
         if (!user) {
           alert("Please login to add money to wallet");
-          window.location.href = "login.html";
+          window.location.href = "/login";
           return;
         }
 
