--- a/frontend/cabs.html
+++ b/frontend/cabs.html
@@ -253,7 +253,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Cab Booking</h1>
       <p>Find the best deals for cabs</p>
     </div>
