--- a/frontend/completed.html
+++ b/frontend/completed.html
@@ -535,7 +535,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Completed Trips</h1>
       <p>Your travel memories and achievements</p>
     </div>
@@ -651,7 +651,7 @@
           <div class="no-trips">
             <h3>Please Login First</h3>
             <p>You need to login to view your completed trips.</p>
-            <a href="login.html" class="book-now-btn">Login Now</a>
+            <a href="/login" class="book-now-btn">Login Now</a>
           </div>
         `;
           return;
@@ -672,7 +672,7 @@
           <div class="no-trips">
             <h3>No Completed Trips Yet</h3>
             <p>Once you complete your bookings, they'll appear here with all your travel memories!</p>
-            <a href="main.html" class="book-now-btn">Plan Your First Trip</a>
+            <a href="/main" class="book-now-btn">Plan Your First Trip</a>
           </div>
         `;
           return;
