--- a/frontend/flights.html
+++ b/frontend/flights.html
@@ -238,7 +238,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Flight Booking</h1>
       <p>Find the best deals for flights</p>
     </div>
