--- a/frontend/hotels.html
+++ b/frontend/hotels.html
@@ -377,7 +377,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Hotel Booking</h1>
       <p>Find the perfect stay for your journey</p>
     </div>
@@ -780,7 +780,7 @@
 
         if (!user) {
           alert("Please login to book hotels");
-          window.location.href = "login.html";
+          window.location.href = "/login";
           return;
         }
 
