--- a/frontend/insurance.html
+++ b/frontend/insurance.html
@@ -217,7 +217,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Travel Insurance</h1>
       <p>Protect your journey with comprehensive travel insurance coverage</p>
     </div>
@@ -427,7 +427,7 @@
 
         if (!user) {
           alert("Please login to purchase insurance");
-          window.location.href = "login.html";
+          window.location.href = "/login";
           return;
         }
 
