--- a/frontend/tours.html
+++ b/frontend/tours.html
@@ -391,7 +391,7 @@
   </head>
   <body>
     <div class="header">
-      <a href="main.html" class="back-btn">← Back</a>
+      <a href="/main" class="back-btn">← Back</a>
       <h1>Smart Tour Planner</h1>
       <p>Let AI create your perfect trip step by step</p>
     </div>
